fix(FileOrganizer): fix to spacing issue with non-virtualized items
This prevents the bug where spacing was large between items when flex-wrapped

Fixes #1

--- a/src/components/FileOrganizer/_FileOrganizer.scss
+++ b/src/components/FileOrganizer/_FileOrganizer.scss
@@ -3,8 +3,12 @@
   flex-wrap: wrap;
   align-items: flex-start;
   position: relative;
-  height: 100%;
+  max-height: 100%;
   overflow: auto;
+
+  &--virtualized {
+    height: 100%;
+  }
 
   &__draglayer {
     overflow: visible;
